--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.0.72"
 prost = "0.11.9"
 serde = { version = "1.0.183", features = ["derive"] }
+tokio = { version = "1.31.0", features = ["full"] }
 tonic = "0.9.2"
